--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,22 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <style>
+      .loader-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div class="loader-container">
+      <img src="%PUBLIC_URL%/logo.png"/>
+      <div>Đang tải dữ liệu... </div>
+    </div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
