--- a/public/index.html
+++ b/public/index.html
@@ -33,12 +33,15 @@
         align-items: center;
         height: 100vh;
       }
+      .loader-image {
+        transform: rotateY(180deg);
+      }
     </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div class="loader-container">
-      <img src="%PUBLIC_URL%/logo.png"/>
+      <img id="loader-image" src="%PUBLIC_URL%/logo.png"/>
       <div>Đang tải dữ liệu... </div>
     </div>
     <div id="root"></div>
